feat(pages/register): amend layout of register page and register-v2 page

--- a/src/app/main/general/pages/register-v2/register-v2.component.html
+++ b/src/app/main/general/pages/register-v2/register-v2.component.html
@@ -1,6 +1,6 @@
 <div class="layout-full pages-register-v2">
-    <div class="page text-center">
-        <div fxLayout="row" fxLayoutAlign="space-between start" fxLayoutAlign.lt-md="center start" class="h-100-p">
+    <div class="page text-center" notaddPerfectScrollbar>
+        <div fxLayout="row nowrap" fxLayoutAlign="space-between stretch" fxLayoutAlign.lt-md="center start" class="h-100-p">
             <div class="brand-info mt-200 pt-100" fxHide.lt-md>
                 <div class="brand text-left pl-60">
                     <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-48"></mat-icon>
@@ -8,8 +8,8 @@
                 <p class="s-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
-            <div class="auth-box auth-main" fxLayout="column nowrap" fxLayoutAlign="center center">
-                <div class="auth-main-inner">
+            <div class="auth-box auth-main vertical-align">
+                <div class="auth-main-inner vertical-align-middle">
                     <div class="brand mt-20 mb-20 text-left">
                         <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-36"></mat-icon>
                     </div>
