--- a/src/app/main/general/pages/register/register.component.html
+++ b/src/app/main/general/pages/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="pages-register layout-full">
-    <div class="page text-center" fxLayout="column nowarp" fxLayoutAlign="center center">
-        <div class="page-content auth-box">
+    <div class="page text-center vertical-align" notaddPerfectScrollbar>
+        <div class="page-content auth-box vertical-align-middle">
             <div class="brand mb-20 text-left pl-80">
                 <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-36"></mat-icon>
             </div>
