fix(elements/cards): change `nowarp` to `nowrap`

--- a/src/app/main/elements/basic-ui/cards/cards.component.html
+++ b/src/app/main/elements/basic-ui/cards/cards.component.html
@@ -107,7 +107,7 @@
     <div class="header center">
         <h1 class="mt-16">EXTRA</h1>
     </div>
-    <div class="content center" fxLayout="row nowarp" fxLayoutAlign="space-between start">
+    <div class="content center" fxLayout="row nowrap" fxLayoutAlign="space-between start">
         <div class="content-area pb-12" fxLayout="column nowrap" fxLayoutGap="30px" fxFlex="49">
             <h3>HEADER AND FOOTER</h3>
             <mat-card>
@@ -171,7 +171,7 @@
     <div class="header center">
         <h1 class="mt-16">VARIANTS</h1>
     </div>
-    <div class="content center" fxLayout="column nowarp" fxLayoutAlign="space-between start">
+    <div class="content center" fxLayout="column nowrap" fxLayoutAlign="space-between start">
         <h3>DECKS</h3>
         <div class="content-area" fxLayout="row nowrap" fxLayoutGap="30px">
             <mat-card fxFlex="1 0 0%" class="card-deck">
