feat(pages/login-v2): amend login-v2 page fxLayoutAlign.lt-md cross-axis

--- a/src/app/main/general/pages/login-v2/login-v2.component.html
+++ b/src/app/main/general/pages/login-v2/login-v2.component.html
@@ -1,6 +1,6 @@
 <div class="layout-full pages-login-v2">
     <div class="page text-center" notaddPerfectScrollbar>
-        <div fxLayout="row nowrap" fxLayoutAlign="space-between stretch" fxLayoutAlign.lt-md="center start" class="h-100-p">
+        <div fxLayout="row nowrap" fxLayoutAlign="space-between stretch" fxLayoutAlign.lt-md="center stretch" class="h-100-p">
             <div class="brand-info mt-200 pt-100" fxHide.lt-md>
                 <div class="brand text-left pl-60">
                     <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-48"></mat-icon>
