feat(@notadd/scss): change third party style file url

--- a/src/@notadd/scss/core.scss
+++ b/src/@notadd/scss/core.scss
@@ -1,5 +1,5 @@
 // Perfect scrollbar
-@import '~perfect-scrollbar/css/perfect-scrollbar';
+@import url(~perfect-scrollbar/css/perfect-scrollbar);
 
 // Notadd
 @import "notadd";
