--- a/src/@notadd/scss/partials/_icons.scss
+++ b/src/@notadd/scss/partials/_icons.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("https://fonts.loli.net/icon?family=Material+Icons");
 
 i,
 mat-icon {
