--- a/src/@notadd/components/theme-panel/theme-panel.component.scss
+++ b/src/@notadd/components/theme-panel/theme-panel.component.scss
@@ -23,7 +23,7 @@
     }
 
     .header {
-        height: 66px;
+        min-height: 64px;
         padding: 0 24px;
         display: flex;
         flex: 0 1 auto;
@@ -34,7 +34,7 @@
         top: 0;
         right: 0;
         background: #FFF;
-        z-index: 1;
+        z-index: 2;
 
         .title {
             font-size: 20px;
