--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
             <!--<h1 class="title">Notadd 后台管理</h1>-->
             <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" aria-hidden="true"></mat-icon>
         </div>
-        <div class="logo" [ngClass]="notaddConfig.layout.navbar.background">
+        <div class="logo" [ngClass]="notaddConfig.layout.navbar.background" fxHide.xs>
             <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo-circle" aria-hidden="true"></mat-icon>
         </div>
 
