--- a/src/app/main/elements/basic-ui/list/list.component.html
+++ b/src/app/main/elements/basic-ui/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="element-list page-layout card">
     <div class="content center mt-32" fxLayout="row nowrap" fxLayoutAlign="space-between start" fxLayoutGap="30px">
-        <div class="p-24" fxLayout="column nowrap" fxFlex="1 0 0%">
+        <div class="p-24" fxLayout="column nowrap" fxFlex="1 0 auto">
             <h3>Simple lists</h3>
             <mat-list>
                 <mat-list-item>
@@ -45,7 +45,7 @@
                 </mat-list-item>
             </mat-list>
         </div>
-        <div class="p-24" fxLayout="column nowrap" fxFlex="1 0 0%">
+        <div class="p-24" fxLayout="column nowrap" fxFlex="1 0 auto">
             <h3>Navigation lists</h3>
             <mat-nav-list>
                 <mat-list-item>
@@ -80,7 +80,7 @@
                 </mat-list-item>
             </mat-nav-list>
         </div>
-        <div class="p-24" fxLayout="column nowrap" fxFlex="1 0 0%">
+        <div class="p-24" fxLayout="column nowrap" fxFlex="1 0 auto">
             <h3>Selection lists</h3>
             <mat-selection-list>
                 <mat-list-option>Boots</mat-list-option>
