--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -1,109 +1,159 @@
 <mat-toolbar color="primary" class="p-0 mat-elevation-z1">
 
-    <div fxFlex fxFlexFill fxLayout="row" fxLayoutAlign="start center">
+    <mat-toolbar-row>
+        <div fxFlex fxFlexFill fxLayout="row" fxLayoutAlign="start center">
 
-        <div class="navbar-logo" fxLayout="row" fxLayoutAlign="space-between center">
+            <div class="navbar-logo" fxLayout="row" fxLayoutAlign="space-between center">
 
-            <div class="ml-16" fxFlex="80" *ngIf="rightNavbar || hiddenNavbar">
-                <mat-icon class="logo secondary-text" fontSet="NotaddIcon" fontIcon="icon-logo" aria-hidden="true"></mat-icon>
+                <div class="ml-16" fxFlex="80" fxHide.xs *ngIf="rightNavbar || hiddenNavbar">
+                    <mat-icon class="logo secondary-text" fontSet="NotaddIcon" fontIcon="icon-logo" aria-hidden="true"></mat-icon>
+                </div>
+
+                <ng-container>
+                    <button mat-icon-button
+                            *ngIf="!rightNavbar"
+                            class="navbar-toggle-button"
+                            (click)="onMenuButtonClick()">
+                        <mat-icon class="secondary-text" *ngIf="isMobile; else notMobild">{{hiddenNavbar ? 'menu' : 'close'}}</mat-icon>
+                        <ng-template #notMobild>
+                            <mat-icon class="secondary-text">menu</mat-icon>
+                        </ng-template>
+                    </button>
+
+                    <div *ngIf="hiddenNavbar" class="toolbar-separator" fxHide.xs></div>
+                </ng-container>
+
             </div>
-
-            <ng-container>
-                <button mat-icon-button
-                        *ngIf="!rightNavbar"
-                        class="navbar-toggle-button"
-                        (click)="toggleSidebarCollapsed()">
-                    <mat-icon class="secondary-text">menu</mat-icon>
-                </button>
-
-                <div *ngIf="hiddenNavbar" class="toolbar-separator"></div>
-            </ng-container>
 
         </div>
 
-    </div>
+        <div fxFlex="0 1 auto" fxLayout="row" fxLayoutAlign="start center">
 
-    <div fxFlex="0 1 auto" fxLayout="row" fxLayoutAlign="start center">
+            <!-- not xs breakpoint user template -->
+            <ng-container *ngIf="!isMobile">
+                <ng-container *ngTemplateOutlet="user"></ng-container>
+            </ng-container>
 
-        <button mat-button [matMenuTriggerFor]="userMenu"
-                class="user-button">
-            <div fxLayout="row" fxLayoutAlign="center center">
-                <img class="avatar" src="assets/images/avatars/tianhun.jpg">
-                <span class="username" fxHide fxShow.gt-sm>天魂</span>
-                <mat-icon class="s-16" fxHide.xs>keyboard_arrow_down</mat-icon>
-            </div>
-        </button>
+            <!-- not xs breakpoint language template -->
+            <ng-container *ngIf="!isMobile">
+                <ng-container *ngTemplateOutlet="language"></ng-container>
+            </ng-container>
 
-        <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
+            <!-- search bar -->
+            <notadd-search-bar (input)="search($event)"></notadd-search-bar>
 
-            <button mat-menu-item>
-                <mat-icon>account_circle</mat-icon>
-                <span>个人信息</span>
+            <div class="toolbar-separator" fxHide.xs></div>
+
+            <!-- fullscreen toggle -->
+            <button mat-icon-button
+                    fxHide.xs
+                    class="toolbar-button"
+                    (click)="toggleFullscreen()">
+                <mat-icon class="s-24 secondary-text">{{isFullscreen ? 'fullscreen_exit' : 'fullscreen'}}</mat-icon>
             </button>
 
-            <button mat-menu-item>
-                <mat-icon>mail</mat-icon>
-                <span>收件箱</span>
+            <div class="toolbar-separator" fxHide.xs></div>
+
+            <!-- not xs breakpoint settings template -->
+            <ng-container *ngIf="!isMobile">
+                <ng-container *ngTemplateOutlet="settings"></ng-container>
+            </ng-container>
+
+            <!-- xs breakpoint more button -->
+            <button mat-icon-button
+                    fxHide
+                    fxShow.xs
+                    class="toolbar-button"
+                    (click)="toggleMoreToolbarVisible()">
+                <mat-icon class="secondary-text">more_horiz</mat-icon>
             </button>
 
-            <mat-divider></mat-divider>
-
-            <button mat-menu-item>
-                <mat-icon>exit_to_app</mat-icon>
-                <span>退出</span>
+            <!-- right menu -->
+            <button mat-icon-button
+                    *ngIf="rightNavbar"
+                    class="toolbar-button"
+                    (click)="toggleSidenavCollapsed()">
+                <mat-icon class="secondary-text">menu</mat-icon>
             </button>
 
-        </mat-menu>
+        </div>
+    </mat-toolbar-row>
 
-        <div class="toolbar-separator"></div>
-
-        <notadd-search-bar (input)="search($event)"></notadd-search-bar>
-
-        <div class="toolbar-separator"></div>
-
-        <button mat-icon-button
-                [fxHide]="true"
-                [fxHide.gt-sm]="false"
-                class="fullscreen-toggle-button"
-                (click)="toggleFullscreen()">
-            <mat-icon class="s-24 secondary-text">{{isFullscreen ? 'fullscreen_exit' : 'fullscreen'}}</mat-icon>
-        </button>
-
-        <div class="toolbar-separator" fxHide fxShow.gt-xs></div>
-
-        <button mat-button
-                class="language-button"
-                [matMenuTriggerFor]="languageMenu">
-            <div fxLayout="row" fxLayoutAlign="center center">
-                <mat-icon class="s-20 mr-4 secondary-text">language</mat-icon>
-                <span class="secondary-text">{{currentLanguage.title}}</span>
-                <mat-icon class="s-16" fxHide.xs>keyboard_arrow_down</mat-icon>
-            </div>
-        </button>
-
-        <mat-menu #languageMenu="matMenu" [overlapTrigger]="false">
-            <button mat-menu-item *ngFor="let lang of languages" (click)="setLanguage(lang)">
-                <span>{{lang.title}}</span>
-            </button>
-        </mat-menu>
-
-        <div class="toolbar-separator" fxHide fxShow.gt-xs></div>
-
-        <button mat-icon-button
-                class="settings-toggle-button"
-                (click)="toggleSidebarOpen('themeOptionsPanel')">
-            <mat-icon class="s-20 secondary-text">settings</mat-icon>
-        </button>
-
-        <div *ngIf="rightNavbar" class="toolbar-separator" fxHide fxShow.gt-xs></div>
-
-        <button mat-icon-button
-                *ngIf="rightNavbar"
-                class="navbar-toggle-button"
-                (click)="toggleSidebarCollapsed()">
-            <mat-icon class="secondary-text">menu</mat-icon>
-        </button>
-
-    </div>
+    <mat-toolbar-row *ngIf="isMoreToolbarVisible" class="more-toolbar" fxLayout="column nowrap">
+        <mat-divider class="more-divider"></mat-divider>
+        <div fxFlexFill fxLayout="row nowrap" fxLayoutAlign="end center">
+            <ng-container *ngTemplateOutlet="user"></ng-container>
+            <ng-container *ngTemplateOutlet="language"></ng-container>
+            <ng-container *ngTemplateOutlet="settings"></ng-container>
+        </div>
+    </mat-toolbar-row>
 
 </mat-toolbar>
+
+
+<!-- user -->
+<ng-template #user>
+    <button mat-button [matMenuTriggerFor]="userMenu"
+            class="toolbar-button">
+        <div fxLayout="row" fxLayoutAlign="center center">
+            <img class="avatar" src="assets/images/avatars/tianhun.jpg">
+            <span class="username">天魂</span>
+            <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
+        </div>
+    </button>
+
+    <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
+
+        <button mat-menu-item>
+            <mat-icon>account_circle</mat-icon>
+            <span>个人信息</span>
+        </button>
+
+        <button mat-menu-item>
+            <mat-icon>mail</mat-icon>
+            <span>收件箱</span>
+        </button>
+
+        <mat-divider></mat-divider>
+
+        <button mat-menu-item>
+            <mat-icon>exit_to_app</mat-icon>
+            <span>退出</span>
+        </button>
+
+    </mat-menu>
+
+    <div class="toolbar-separator" fxHide.xs></div>
+</ng-template>
+
+<!-- language -->
+<ng-template #language>
+    <button mat-button
+            class="toolbar-button"
+            [matMenuTriggerFor]="languageMenu">
+        <div fxLayout="row" fxLayoutAlign="center center">
+            <mat-icon class="s-20 mr-4 secondary-text">language</mat-icon>
+            <span class="secondary-text">{{currentLanguage.title}}</span>
+            <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
+        </div>
+    </button>
+
+    <mat-menu #languageMenu="matMenu" [overlapTrigger]="false">
+        <button mat-menu-item *ngFor="let lang of languages" (click)="setLanguage(lang)">
+            <span>{{lang.title}}</span>
+        </button>
+    </mat-menu>
+
+    <div class="toolbar-separator" fxHide.xs></div>
+</ng-template>
+
+<!-- settings -->
+<ng-template #settings>
+    <button mat-icon-button
+            class="toolbar-button"
+            (click)="toggleSidebarOpen('themeOptionsPanel')">
+        <mat-icon class="s-20 secondary-text">settings</mat-icon>
+    </button>
+
+    <div *ngIf="rightNavbar" class="toolbar-separator"></div>
+</ng-template>
