feat(app): add theme-options-button in app component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import "src/@notadd/scss/notadd";
+
 :host {
     position: relative;
     display: flex;
@@ -5,4 +7,28 @@
     width: 100%;
     height: 100%;
     min-width: 0;
+
+    .theme-options-button {
+        position: absolute;
+        top: 64px;
+        right: 0;
+        width: 48px;
+        height: 48px;
+        line-height: 48px;
+        text-align: center;
+        cursor: pointer;
+        border-radius: 0;
+        margin: 0;
+        pointer-events: auto;
+        opacity: .90;
+        z-index: 998;
+
+        mat-icon {
+            animation: rotating 3s linear infinite;
+        }
+
+        &:hover {
+            opacity: 1;
+        }
+    }
 }
