--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,11 @@
 
 <layout></layout>
 
+<button *ngIf="notaddConfig.layout.toolbar.hidden" mat-icon-button class="primary mat-elevation-z2 theme-options-button"
+        (click)="toggleSidebarOpen('themeOptionsPanel')">
+    <mat-icon>settings</mat-icon>
+</button>
+
 <notadd-sidebar name="themeOptionsPanel" class="theme-options-sidebar" position="right" [invisibleOverlay]="true">
     <notadd-theme-panel></notadd-theme-panel>
 </notadd-sidebar>
