--- a/src/app/main/general/dashboards/analysis/analysis.component.html
+++ b/src/app/main/general/dashboards/analysis/analysis.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard-analysis">
+<div class="page-layout blank dashboard-analysis">
     <section fxLayout="row nowrap" fxLayoutAlign="space-between center" fxLayoutGap="30px">
         <mat-card fxFlex="1 0 0%" *ngFor="let widget of widgets">
             <mat-card-header>
