--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,5 +1,3 @@
-$height__main-toolbar: 64px;
-
 layout {
     display: flex;
     flex: 1 1 auto;
@@ -16,34 +14,45 @@ layout {
         z-index: 1;
         min-width: 0;
 
-        mat-sidenav-container {
-            height: calc(100% - #{$height__main-toolbar});
-
-            &.full-height {
-                height: 100%;
-            }
-        }
-
-        mat-sidenav-content {
-            background-color: #f5f5f5;
-        }
-
-        > .container {
+        /* Sidenav container */
+        > .mat-sidenav-container {
             position: relative;
             display: flex;
             flex: 1 1 0;
-            flex-direction: column;
-            transform: translateZ(0);
-            overflow-x: hidden;
-            overflow-y: auto;
-            -webkit-overflow-scrolling: touch;
+            width: 100%;
+            min-height: 0;
+            min-width: 0;
 
-            // content component
-            content {
+            /* Sidenav content */
+            > .mat-sidenav-content {
+                position: relative;
+                display: flex;
+                flex: 1 1 0;
+                flex-direction: column;
+                min-width: 0;
 
-                &.inner-scroll {
+                // Container (Scrollable)
+                > .container {
+                    position: relative;
+                    display: flex;
                     flex: 1 1 0;
-                    min-height: 0;
+                    flex-direction: column;
+                    overflow-x: hidden;
+                    overflow-y: auto;
+                    -webkit-overflow-scrolling: touch;
+
+                    // Content component
+                    content {
+
+                        &.inner-scroll {
+                            flex: 1 1 0;
+                            min-height: 0;
+
+                            > *:not(router-outlet) {
+                                flex: 1 1 0;
+                            }
+                        }
+                    }
                 }
             }
         }
