--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -97,7 +97,7 @@
             class="toolbar-button">
         <div fxLayout="row" fxLayoutAlign="center center">
             <img class="avatar" src="assets/images/avatars/tianhun.jpg">
-            <span class="username">天魂</span>
+            <span class="secondary-text">天魂</span>
             <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
         </div>
     </button>
