feat(elements/buttons): amend buttons component adaptation

--- a/src/app/main/elements/basic-ui/buttons/buttons.component.html
+++ b/src/app/main/elements/basic-ui/buttons/buttons.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="content center" fxLayout="column nowrap">
         <h3>Basic Buttons</h3>
-        <div class="content-row" fxLayout="row nowrap" fxLayoutAlign="start center" fxLayoutGap="20px">
+        <div class="content-row" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="20px">
             <button mat-button>Basic</button>
             <button mat-button color="primary">Primary</button>
             <button mat-button color="accent">Accent</button>
@@ -14,7 +14,7 @@
         </div>
         <mat-divider></mat-divider>
         <h3>Raised Buttons</h3>
-        <div class="content-row" fxLayout="row nowrap" fxLayoutAlign="start center" fxLayoutGap="20px">
+        <div class="content-row" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="20px">
             <button mat-raised-button>Basic</button>
             <button mat-raised-button color="primary">Primary</button>
             <button mat-raised-button color="accent">Accent</button>
@@ -24,7 +24,7 @@
         </div>
         <mat-divider></mat-divider>
         <h3>Stroked Buttons</h3>
-        <div class="content-row" fxLayout="row nowrap" fxLayoutAlign="start center" fxLayoutGap="20px">
+        <div class="content-row" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="20px">
             <button mat-stroked-button>Basic</button>
             <button mat-stroked-button color="primary">Primary</button>
             <button mat-stroked-button color="accent">Accent</button>
@@ -34,7 +34,7 @@
         </div>
         <mat-divider></mat-divider>
         <h3>Flat Buttons</h3>
-        <div class="content-row" fxLayout="row nowrap" fxLayoutAlign="start center" fxLayoutGap="20px">
+        <div class="content-row" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="20px">
             <button mat-flat-button>Basic</button>
             <button mat-flat-button color="primary">Primary</button>
             <button mat-flat-button color="accent">Accent</button>
@@ -44,7 +44,7 @@
         </div>
         <mat-divider></mat-divider>
         <h3>Icon Buttons</h3>
-        <div class="content-row" fxLayout="row nowrap" fxLayoutAlign="start center" fxLayoutGap="20px">
+        <div class="content-row" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="20px">
             <button mat-icon-button>
                 <mat-icon>favorite</mat-icon>
             </button>
@@ -63,7 +63,7 @@
         </div>
         <mat-divider></mat-divider>
         <h3>Fab Buttons</h3>
-        <div class="content-row" fxLayout="row nowrap" fxLayoutAlign="start center" fxLayoutGap="20px">
+        <div class="content-row" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="20px">
             <button mat-fab>Basic</button>
             <button mat-fab color="primary">Primary</button>
             <button mat-fab color="accent">Accent</button>
@@ -76,7 +76,7 @@
         </div>
         <mat-divider></mat-divider>
         <h3>Mini Fab Buttons</h3>
-        <div class="content-row" fxLayout="row nowrap" fxLayoutAlign="start center" fxLayoutGap="20px">
+        <div class="content-row" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="20px">
             <button mat-mini-fab>Basic</button>
             <button mat-mini-fab color="primary">Primary</button>
             <button mat-mini-fab color="accent">Accent</button>
